@@ -91,6 +91,7 @@ ffi_call_unix:
 	;;
 	ldfd	f14=[loc2],2*FLOAT_SZ
 	ldfd	f15=[loc3]
+	;;
 fp_done:
 	add	r9=16,sp	/* Pointer to r8_contents	*/
 	/* loc2 points at first integer register value.  */
@@ -297,8 +298,8 @@ ffi_closure_UNIX:
 	stfd	[r14]=f12,2*FLOAT_SZ
 	stfd	[r15]=f13,2*FLOAT_SZ
 	;;
-	stfd	[r14]=f14,FLOAT_SZ+8
-	stfd	[r15]=f15,2*8
+	stfd	[r14]=f14,2*FLOAT_SZ
+	stfd	[r15]=f15,FLOAT_SZ+8
 	;;
 	/* r14 points to first parameter register area, r15 to second. */
 	st8	[r14]=in0,2*8
